...
        android:layout_height="wrap_content"
        >

        <!-- heading -->

        <TextView
            android:id="@+id/fragment_recipe_heading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_default_name"
            android:textSize="@dimen/recipe_text_size"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
...
            />


        <!-- body -->

        <Button
            android:id="@+id/fragment_recipe_ingredients_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_recipe_servings_key_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
