<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:isScrollContainer="true">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/master_RV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:alwaysDrawnWithCache="false"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/fragment_master_list_empty_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/fragment_master_list_empty_note"
        android:visibility="visible"
        android:lineSpacingExtra="10sp"
        />

</LinearLayout>

